--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://aseprites/aseprite/wario_animations_booooooo.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://aseprites/", "res://aseprites/aseprite/", "res://addons/AsepriteWizard/interface/", "res://addons/AsepriteWizard/interface/shared/", "res://addons/AsepriteWizard/interface/imports_manager/", "res://addons/AsepriteWizard/importers/", "res://addons/AsepriteWizard/aseprite/")
+dock_filesystem_selected_paths=PackedStringArray("res://game_singleplayer.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://level/", "res://aseprites/aseprite/", "res://addons/", "res://addons/AsepriteWizard/interface/", "res://addons/AsepriteWizard/interface/shared/", "res://addons/AsepriteWizard/interface/imports_manager/", "res://addons/AsepriteWizard/importers/", "res://addons/AsepriteWizard/aseprite/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game_singleplayer.tscn", "res://gui/pause_menu_singleplayer.tscn", "res://addons/virtual_joystick/test/test.tscn", "res://player/player.tscn", "res://addons/virtual_joystick/virtual_joystick_scene.tscn")
-current_scene="res://player/player.tscn"
-center_split_offset=-303
+open_scenes=PackedStringArray("res://gui/pause_menu_singleplayer.tscn", "res://player/player.tscn", "res://level/level.tscn", "res://game_splitscreen.tscn", "res://game_singleplayer.tscn")
+current_scene="res://game_singleplayer.tscn"
+center_split_offset=-302
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://game.gd", "res://player/gun.gd", "res://gui/pause_menu.gd", "res://player/player.gd", "res://addons/virtual_joystick/virtual_joystick.gd"]
-selected_script="res://player/player.gd"
+open_scripts=["res://game.gd", "res://game_splitscreen.gd", "res://player/gun.gd", "res://gui/pause_menu.gd", "res://player/player.gd"]
+selected_script="res://game.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
