--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -33,7 +33,7 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 24,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 187,
 "row": 49,
 "scroll_position": 49.0,
 "selection": false,
@@ -45,12 +45,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
+"row": 39,
+"scroll_position": 30.0,
+"selection": true,
+"selection_from_column": 28,
+"selection_from_line": 39,
+"selection_to_column": 35,
+"selection_to_line": 39,
 "syntax_highlighter": "GDScript"
 }
 
@@ -69,5 +73,33 @@ state={
 "selection_from_line": 16,
 "selection_to_column": 34,
 "selection_to_line": 16,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/virtual_joystick/virtual_joystick_instantiator.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://game_splitscreen.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
