--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -40,24 +40,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://addons/virtual_joystick/virtual_joystick.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 35,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 39,
-"scroll_position": 30.0,
-"selection": true,
-"selection_from_column": 28,
-"selection_from_line": 39,
-"selection_to_column": 35,
-"selection_to_line": 39,
-"syntax_highlighter": "GDScript"
-}
-
 [res://player/gun.gd]
 
 state={
@@ -76,7 +58,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://addons/virtual_joystick/virtual_joystick_instantiator.gd]
+[res://game_splitscreen.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -90,7 +72,21 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://game_splitscreen.gd]
+[res://addons/virtual_joystick_custom/virtual_joystick.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 52,
+"scroll_position": 38.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/virtual_joystick_custom/virtual_joystick_instantiator.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -101,5 +97,23 @@ state={
 "row": 0,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/virtual_joystick_custom/test/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 40,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 2.0,
+"selection": true,
+"selection_from_column": 33,
+"selection_from_line": 17,
+"selection_to_column": 40,
+"selection_to_line": 17,
 "syntax_highlighter": "GDScript"
 }
