--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://level/", "res://aseprites/aseprite/", "res://addons/", "res://addons/AsepriteWizard/interface/", "res://addons/AsepriteWizard/interface/shared/", "res://addons/AsepriteWizard/interface/imports_manager/", "res://addons/AsepriteWizard/importers/", "res://addons/AsepriteWizard/aseprite/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,7 +31,7 @@ open_scenes=PackedStringArray("res://gui/pause_menu_singleplayer.tscn", "res://p
 current_scene="res://addons/virtual_joystick_custom/test/test.tscn"
 center_split_offset=-302
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
