--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://level/", "res://aseprites/aseprite/", "res://addons/", "res://addons/AsepriteWizard/interface/", "res://addons/AsepriteWizard/interface/shared/", "res://addons/AsepriteWizard/interface/imports_manager/", "res://addons/AsepriteWizard/importers/", "res://addons/AsepriteWizard/aseprite/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://level/", "res://addons/", "res://addons/AsepriteWizard/interface/", "res://addons/AsepriteWizard/interface/shared/", "res://addons/AsepriteWizard/interface/imports_manager/", "res://addons/AsepriteWizard/importers/", "res://addons/AsepriteWizard/aseprite/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
