--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -35,6 +35,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://player/gun.gd"
 }, {
+"base": &"Node",
+"class": &"Level_1",
+"icon": "",
+"language": &"GDScript",
+"path": "res://levels/level_1/level_1.gd"
+}, {
 "base": &"Control",
 "class": &"PauseMenu",
 "icon": "",
