--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=173
-dock_hsplit_3=-452
+dock_hsplit_2=127
+dock_hsplit_3=-193
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://levels/level_1/level/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://levels/", "res://levels/level_1/", "res://level/", "res://assets/aseprites/aseprite/", "res://addons/AsepriteWizard/interface/", "res://addons/AsepriteWizard/interface/shared/", "res://addons/AsepriteWizard/interface/imports_manager/", "res://addons/AsepriteWizard/importers/", "res://addons/AsepriteWizard/aseprite/")
+dock_filesystem_selected_paths=PackedStringArray("res://level/tileset.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://levels/", "res://levels/level_1/", "res://levels/level_1/level/", "res://level/", "res://assets/aseprites/aseprite/", "res://addons/AsepriteWizard/interface/", "res://addons/AsepriteWizard/interface/shared/", "res://addons/AsepriteWizard/interface/imports_manager/", "res://addons/AsepriteWizard/importers/", "res://addons/AsepriteWizard/aseprite/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://game_singleplayer.tscn", "res://levels/level_1/level_1.tscn", "res://level/level.tscn", "res://levels/level_1/level/level.tscn")
-current_scene="res://levels/level_1/level_1.tscn"
-center_split_offset=-192
+current_scene="res://levels/level_1/level/level.tscn"
+center_split_offset=-262
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
-open_scripts=["res://level/coin.gd", "res://game.gd", "res://levels/level_1/level_1.gd", "res://game_splitscreen.gd", "res://player/gun.gd", "res://levels/level_1/level/level.gd", "res://level/level.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://player/player.gd", "res://addons/virtual_joystick_custom/test/player.gd", "res://addons/virtual_joystick_custom/virtual_joystick.gd"]
-selected_script="res://game.gd"
+open_scripts=["res://level/coin.gd", "res://game.gd", "res://game_splitscreen.gd", "res://player/gun.gd", "res://levels/level_1/level/level.gd", "res://level/level.gd", "res://levels/level_1/level_1.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://player/player.gd", "res://addons/virtual_joystick_custom/test/player.gd", "res://addons/virtual_joystick_custom/virtual_joystick.gd"]
+selected_script="res://player/player.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=0
