--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,7 +12,7 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=127
+dock_hsplit_2=259
 dock_hsplit_3=-193
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -27,12 +27,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game_singleplayer.tscn", "res://levels/level_1/level_1.tscn", "res://level/level.tscn", "res://levels/level_1/level/level.tscn")
-current_scene="res://levels/level_1/level/level.tscn"
+open_scenes=PackedStringArray("res://game_singleplayer.tscn", "res://levels/level_1/level_1.tscn", "res://level/level.tscn", "res://levels/level_1/level/level.tscn", "res://player/player.tscn")
+current_scene="res://player/player.tscn"
 center_split_offset=-262
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=12
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
