--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -3,7 +3,7 @@ list=Array[Dictionary]([{
 "class": &"Bullet",
 "icon": "",
 "language": &"GDScript",
-"path": "res://player/bullet.gd"
+"path": "res://src/player/bullet.gd"
 }, {
 "base": &"Area2D",
 "class": &"Coin",
@@ -33,7 +33,7 @@ list=Array[Dictionary]([{
 "class": &"Gun",
 "icon": "",
 "language": &"GDScript",
-"path": "res://player/gun.gd"
+"path": "res://src/player/gun.gd"
 }, {
 "base": &"Node",
 "class": &"Level_1",
@@ -51,7 +51,7 @@ list=Array[Dictionary]([{
 "class": &"Player",
 "icon": "",
 "language": &"GDScript",
-"path": "res://player/player.gd"
+"path": "res://src/player/player.gd"
 }, {
 "base": &"Control",
 "class": &"VirtualJoystick",
