--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -27,38 +27,6 @@ state={
 "selection_from_line": 65,
 "selection_to_column": 45,
 "selection_to_line": 65,
-"syntax_highlighter": "GDScript"
-}
-
-[res://player/player.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 24,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 49,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://player/gun.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 34,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 16,
-"scroll_position": 6.0,
-"selection": true,
-"selection_from_column": 30,
-"selection_from_line": 16,
-"selection_to_column": 34,
-"selection_to_line": 16,
 "syntax_highlighter": "GDScript"
 }
 
@@ -191,6 +159,34 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/player/gun.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 67,
+"row": 15,
+"scroll_position": 6.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/player/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 49,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
