--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -36,10 +36,22 @@ list=Array[Dictionary]([{
 "path": "res://src/player/gun.gd"
 }, {
 "base": &"Node",
-"class": &"Level_1",
+"class": &"Level1",
 "icon": "",
 "language": &"GDScript",
 "path": "res://levels/level_1/level_1.gd"
+}, {
+"base": &"Node",
+"class": &"Level2",
+"icon": "",
+"language": &"GDScript",
+"path": "res://levels/level_2/level_2.gd"
+}, {
+"base": &"Node",
+"class": &"Level_1",
+"icon": "",
+"language": &"GDScript",
+"path": "res://levels/level_3/level_3.gd"
 }, {
 "base": &"Control",
 "class": &"PauseMenu",
