--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,24 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://levels/level_3/level/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://levels/", "res://levels/level_3/", "res://levels/level_3/level/", "res://levels/level_2/", "res://levels/level_2/level/", "res://levels/level_1/", "res://levels/level_1/level/", "res://level/", "res://assets/aseprites/aseprite/", "res://addons/AsepriteWizard/interface/", "res://addons/AsepriteWizard/interface/shared/", "res://addons/AsepriteWizard/interface/imports_manager/", "res://addons/AsepriteWizard/importers/", "res://addons/AsepriteWizard/aseprite/")
+dock_filesystem_selected_paths=PackedStringArray("res://levels/level_1/level/level.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://levels/", "res://levels/level_3/level/", "res://levels/level_2/level/", "res://levels/level_1/", "res://levels/level_1/level/", "res://level/", "res://assets/aseprites/aseprite/", "res://addons/AsepriteWizard/interface/", "res://addons/AsepriteWizard/interface/shared/", "res://addons/AsepriteWizard/interface/imports_manager/", "res://addons/AsepriteWizard/importers/", "res://addons/AsepriteWizard/aseprite/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game_singleplayer.tscn", "res://levels/level_1/level_1.tscn", "res://levels/level_2/level_2.tscn", "res://levels/level_3/level_3.tscn", "res://levels/level_2/level/level.tscn", "res://levels/level_3/level/level.tscn", "res://level/level.tscn", "res://levels/level_1/level/level.tscn")
-current_scene="res://levels/level_3/level/level.tscn"
+open_scenes=PackedStringArray("res://game_singleplayer.tscn", "res://levels/level_1/level_1.tscn", "res://levels/level_2/level_2.tscn", "res://levels/level_3/level_3.tscn", "res://levels/level_3/level/level.tscn", "res://level/level.tscn", "res://addons/virtual_joystick_custom/test/test.tscn", "res://levels/level_2/level/level.tscn", "res://levels/level_1/level/level.tscn")
+current_scene="res://levels/level_1/level/level.tscn"
 center_split_offset=-262
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://level/coin.gd", "res://enemy/enemy.gd", "res://game.gd", "res://game_splitscreen.gd", "res://src/player/gun.gd", "res://levels/level_1/level/level.gd", "res://level/level.gd", "res://levels/level_3/level/level.gd", "res://levels/level_1/level_1.gd", "res://levels/level_2/level_2.gd", "res://levels/level_3/level_3.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://addons/virtual_joystick_custom/test/player.gd", "res://addons/virtual_joystick_custom/virtual_joystick.gd"]
-selected_script="res://game.gd"
+selected_script="res://levels/level_1/level_1.gd"
 open_help=["Node"]
 script_split_offset=112
 list_split_offset=0
