--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -48,10 +48,16 @@ list=Array[Dictionary]([{
 "path": "res://levels/level_2/level_2.gd"
 }, {
 "base": &"Node",
-"class": &"Level_1",
+"class": &"Level3",
 "icon": "",
 "language": &"GDScript",
 "path": "res://levels/level_3/level_3.gd"
+}, {
+"base": &"Node",
+"class": &"Level4",
+"icon": "",
+"language": &"GDScript",
+"path": "res://levels/level_4/level_4.gd"
 }, {
 "base": &"Control",
 "class": &"PauseMenu",
