--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
-"scroll_position": 10.0,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -113,12 +113,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 204,
-"row": 7,
+"h_scroll_position": 0,
+"row": 8,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 6,
+"selection_to_column": 88,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
