--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -29,6 +29,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://game.gd"
 }, {
+"base": &"Control",
+"class": &"GameSinlgePlayer",
+"icon": "",
+"language": &"GDScript",
+"path": "res://gui/title_screen.gd"
+}, {
 "base": &"Marker2D",
 "class": &"Gun",
 "icon": "",
@@ -39,7 +45,7 @@ list=Array[Dictionary]([{
 "class": &"Level1",
 "icon": "",
 "language": &"GDScript",
-"path": "res://levels/level_1/level_1.gd"
+"path": "res://scenes/scene_1/scene_1.gd"
 }, {
 "base": &"Node",
 "class": &"Level2",
