--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
-"folded_lines": Array[int]([]),
+"column": 0,
+"folded_lines": Array[int]([7, 16]),
 "h_scroll_position": 0,
 "row": 6,
-"scroll_position": 3.0,
-"selection": false,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 6,
+"selection_to_column": 14,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,16 +21,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
-"folded_lines": Array[int]([]),
+"column": 3,
+"folded_lines": Array[int]([55, 59]),
 "h_scroll_position": 0,
-"row": 65,
-"scroll_position": 60.0,
-"selection": true,
-"selection_from_column": 41,
-"selection_from_line": 65,
-"selection_to_column": 45,
-"selection_to_line": 65,
+"row": 19,
+"scroll_position": 25.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,12 +35,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 4,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 3,
+"selection_to_column": 22,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
@@ -54,11 +58,7 @@ state={
 "h_scroll_position": 0,
 "row": 43,
 "scroll_position": 42.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 42,
-"selection_to_column": 36,
-"selection_to_line": 42,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -86,11 +86,7 @@ state={
 "h_scroll_position": 0,
 "row": 17,
 "scroll_position": 2.0,
-"selection": true,
-"selection_from_column": 33,
-"selection_from_line": 17,
-"selection_to_column": 40,
-"selection_to_line": 17,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -116,13 +112,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 7,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 6,
-"selection_to_column": 88,
-"selection_to_line": 6,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -178,11 +170,7 @@ state={
 "h_scroll_position": 0,
 "row": 52,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 52,
-"selection_to_column": 17,
-"selection_to_line": 52,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -229,6 +217,76 @@ state={
 }
 
 [res://levels/level_4/level_4.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/AsepriteWizard/interface/shared/animation_player_drop_button.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://gui/title_screen.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/scene_1/scene_1.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 23,
+"scroll_position": 11.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://export_presets.cfg]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://gui/coins_counter.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
