fix error puase menu scene mode inherit to always

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 8,
 "folded_lines": Array[int]([7, 16]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 6,
-"selection_to_column": 14,
-"selection_to_line": 6,
+"row": 16,
+"scroll_position": 1.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -22,10 +18,10 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 3,
-"folded_lines": Array[int]([55, 59]),
-"h_scroll_position": 0,
-"row": 19,
-"scroll_position": 25.0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 54,
+"row": 28,
+"scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -111,8 +107,8 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 7,
+"h_scroll_position": 181,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -263,11 +259,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 11.0,
+"row": 7,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -287,6 +283,20 @@ state={
 }
 
 [res://gui/coins_counter.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/scenes/scene_2/scene_2.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
