--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://game_splitscreen.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/scene_2/", "res://scenes/scene_1/", "res://levels/level_2/", "res://levels/level_1/level/", "res://gui/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/scenes/scene_2/scene_2.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_2/", "res://src/scenes/scene_1/", "res://levels/level_2/", "res://levels/level_1/level/", "res://gui/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game_singleplayer.tscn", "res://scenes/scene_1/scene_1.tscn", "res://gui/pause_menu_singleplayer.tscn", "res://gui/pause_menu.tscn", "res://game_splitscreen.tscn", "res://scenes/scene_2/scene_2.tscn")
-current_scene="res://gui/pause_menu.tscn"
+open_scenes=PackedStringArray("res://game_singleplayer.tscn", "res://src/scenes/scene_2/scene_2.tscn")
+current_scene="res://src/scenes/scene_2/scene_2.tscn"
 center_split_offset=-262
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://addons/AsepriteWizard/interface/shared/animation_player_drop_button.gd", "res://level/coin.gd", "res://gui/coins_counter.gd", "res://enemy/enemy.gd", "res://export_presets.cfg", "res://game.gd", "res://game_splitscreen.gd", "res://src/player/gun.gd", "res://levels/level_1/level/level.gd", "res://level/level.gd", "res://levels/level_3/level/level.gd", "res://levels/level_3/level_3.gd", "res://levels/level_4/level_4.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://addons/virtual_joystick_custom/test/player.gd", "res://scenes/scene_1/scene_1.gd", "res://gui/title_screen.gd", "res://addons/virtual_joystick_custom/virtual_joystick.gd"]
-selected_script="res://gui/pause_menu.gd"
+open_scripts=["res://addons/AsepriteWizard/interface/shared/animation_player_drop_button.gd", "res://level/coin.gd", "res://gui/coins_counter.gd", "res://enemy/enemy.gd", "res://export_presets.cfg", "res://game.gd", "res://game_splitscreen.gd", "res://src/player/gun.gd", "res://levels/level_1/level/level.gd", "res://level/level.gd", "res://levels/level_3/level/level.gd", "res://levels/level_3/level_3.gd", "res://levels/level_4/level_4.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://addons/virtual_joystick_custom/test/player.gd", "res://scenes/scene_1/scene_1.gd", "res://src/scenes/scene_2/scene_2.gd", "res://gui/title_screen.gd", "res://addons/virtual_joystick_custom/virtual_joystick.gd"]
+selected_script="res://src/scenes/scene_2/scene_2.gd"
 open_help=["Node"]
 script_split_offset=112
 list_split_offset=0
