--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -21,7 +21,7 @@ list=Array[Dictionary]([{
 "class": &"Enemy",
 "icon": "",
 "language": &"GDScript",
-"path": "res://enemy/enemy.gd"
+"path": "res://src/enemy/enemy.gd"
 }, {
 "base": &"Node",
 "class": &"Game",
