--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -27,7 +27,7 @@ list=Array[Dictionary]([{
 "class": &"Game",
 "icon": "",
 "language": &"GDScript",
-"path": "res://game.gd"
+"path": "res://src/game.gd"
 }, {
 "base": &"Marker2D",
 "class": &"Gun",
