--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -12,32 +12,32 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=162
+dock_hsplit_2=127
 dock_hsplit_3=-193
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/")
+dock_filesystem_selected_paths=PackedStringArray("res://gui/pause_menu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://gui/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game_singleplayer.tscn", "res://gui/pause_menu.tscn", "res://gui/pause_menu_singleplayer.tscn")
-current_scene="res://game_singleplayer.tscn"
-center_split_offset=-354
+open_scenes=PackedStringArray("res://src/game_singleplayer.tscn", "res://gui/pause_menu.tscn", "res://gui/pause_menu_singleplayer.tscn", "res://gui/pause_menu_splitscreen.tscn", "res://src/game_splitscreen.tscn")
+current_scene="res://src/game_singleplayer.tscn"
+center_split_offset=-241
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://gui/coins_counter.gd", "res://export_presets.cfg", "res://game.gd", "res://next_level.gd", "res://gui/pause_menu.gd"]
-selected_script="res://game.gd"
+open_scripts=["res://gui/coins_counter.gd", "res://export_presets.cfg", "res://src/game.gd", "res://src/game_splitscreen.gd", "res://next_level.gd", "res://gui/pause_menu.gd"]
+selected_script="res://src/game.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=0
