--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -146,8 +146,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 14.0,
+"row": 3,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -187,7 +187,7 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 20,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 120,
+"h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
 "selection": false,
@@ -202,8 +202,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 6.0,
+"row": 19,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -223,5 +223,19 @@ state={
 "selection_from_line": 3,
 "selection_to_column": 22,
 "selection_to_line": 3,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/gui/title_screen.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 72,
+"scroll_position": 63.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
