Switch level and level list

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -59,6 +59,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://levels/level_4/level_4.gd"
 }, {
+"base": &"CanvasLayer",
+"class": &"LevelList",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/scene_4/Level.gd"
+}, {
 "base": &"Node",
 "class": &"Level_2",
 "icon": "",
@@ -76,6 +82,18 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/player/player.gd"
+}, {
+"base": &"Node",
+"class": &"Scene_3",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/scene_3/scene_3.gd"
+}, {
+"base": &"Node",
+"class": &"Switch_level",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/scene_4/switch_level.gd"
 }, {
 "base": &"Control",
 "class": &"TitleScreen",
