--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -61,13 +61,13 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 2,
+"h_scroll_position": 234,
+"row": 8,
 "scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 2,
-"selection_to_column": 0,
+"selection_from_line": 7,
+"selection_to_column": 79,
 "selection_to_line": 7,
 "syntax_highlighter": "GDScript"
 }
@@ -195,9 +195,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 356,
+"h_scroll_position": 0,
 "row": 76,
-"scroll_position": 66.0,
+"scroll_position": 64.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -207,11 +207,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 5,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -221,12 +221,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 3,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 3,
+"selection_to_column": 31,
+"selection_to_line": 9,
 "syntax_highlighter": "GDScript"
 }
 
@@ -235,16 +239,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 23,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 15,
-"scroll_position": 6.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 14,
-"selection_to_column": 90,
-"selection_to_line": 14,
+"h_scroll_position": 130,
+"row": 10,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -256,8 +256,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 14.0,
+"row": 4,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -268,6 +268,48 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 25,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/scenes/scene_4/Level.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(62),
+"column": 37,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 7,
+"row": 52,
+"scroll_position": 44.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/scenes/scene_4/switch_level.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 27,
+"scroll_position": 20.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/scenes/scene_4/levels/LevelListContainer.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
