--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -35,6 +35,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://src/player/gun.gd"
 }, {
+"base": &"CanvasLayer",
+"class": &"Level",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/scene_levels/Level.gd"
+}, {
 "base": &"Node",
 "class": &"Level1",
 "icon": "",
@@ -59,17 +65,29 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://levels/level_4/level_4.gd"
 }, {
-"base": &"CanvasLayer",
-"class": &"LevelList",
-"icon": "",
-"language": &"GDScript",
-"path": "res://src/scenes/scene_4/Level.gd"
-}, {
 "base": &"Node",
-"class": &"Level_2",
+"class": &"Level_23",
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/scenes/scene_2/scene_2.gd"
+}, {
+"base": &"CanvasLayer",
+"class": &"LevelsList",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/levels_list/LevelsList.gd"
+}, {
+"base": &"Node",
+"class": &"LevelsMain",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/scene_levels/levelsLevel.gd"
+}, {
+"base": &"Node",
+"class": &"Main",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/main.gd"
 }, {
 "base": &"Control",
 "class": &"PauseMenu",
@@ -83,17 +101,17 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://src/player/player.gd"
 }, {
+"base": &"CanvasLayer",
+"class": &"Scene",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scenes/Scene.gd"
+}, {
 "base": &"Node",
 "class": &"Scene_3",
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/scenes/scene_3/scene_3.gd"
-}, {
-"base": &"Node",
-"class": &"Switch_level",
-"icon": "",
-"language": &"GDScript",
-"path": "res://src/scenes/scene_4/switch_level.gd"
 }, {
 "base": &"Control",
 "class": &"TitleScreen",
