--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -147,16 +147,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 19,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 108,
+"h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 11,
-"selection_from_line": 0,
-"selection_to_column": 18,
-"selection_to_line": 0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -211,7 +207,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 5,
-"scroll_position": 6.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -239,11 +235,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 57,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 130,
-"row": 10,
-"scroll_position": 0.0,
+"h_scroll_position": 68,
+"row": 68,
+"scroll_position": 60.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -276,21 +272,25 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://src/scenes/scene_4/Level.gd]
+[res://src/scenes/main.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 95,
-"scroll_position": 87.0,
-"selection": false,
+"row": 8,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 8,
+"selection_to_column": 26,
+"selection_to_line": 8,
 "syntax_highlighter": "GDScript"
 }
 
-[res://src/scenes/scene_4/switch_level.gd]
+[res://src/scenes/levels_list/LevelsList.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -298,13 +298,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 20.0,
+"row": 21,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://src/scenes/scene_4/levels/LevelListContainer.gd]
+[res://src/scenes/Scene.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -312,7 +312,53 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 48,
+"scroll_position": 30.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 48,
+"selection_to_column": 19,
+"selection_to_line": 48,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/scenes/scene_levels/Level.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 9.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/scenes/scene_levels/levelsLevel.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 23,
+"scroll_position": 17.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/scenes/scene_levels/level_1/main.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
