Create title screen, menu, list levels and levels

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,26 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/scenes/levels_list/LevelsList.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_levels/", "res://src/scenes/levels_list/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/scenes/scene_levels/levels.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_menu/", "res://src/scenes/scene_levels_list/", "res://src/scenes/scene_levels/", "res://assets/tiles/", "res://assets/sounds/", "res://assets/images/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/scenes/scene_levels/levelsLevel.tscn", "res://src/scenes/scene_levels/level_1/level.tscn", "res://src/scenes/main.tscn", "res://src/scenes/scene_levels/level_2/level.tscn", "res://src/scenes/levels_list/LevelsList.tscn", "res://src/game_singleplayer.tscn", "res://src/gui/title_screen.tscn", "res://src/scenes/scene_menu/menuLevel.tscn", "res://src/scenes/scene_Desert/DesertLevel.tscn")
-current_scene="res://src/scenes/levels_list/LevelsList.tscn"
-center_split_offset=-216
+open_scenes=PackedStringArray("res://src/scenes/main.tscn", "res://src/scenes/scene_levels_list/levels_list.tscn")
+current_scene="res://src/scenes/main.tscn"
+center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/game.gd", "res://src/game_splitscreen.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/levels_list/LevelsList.gd", "res://src/scenes/main.gd", "res://src/scenes/scene_levels/level_1/main.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/scenes/Scene.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/scenes/scene_3/scene_3.gd", "res://src/gui/title_screen.gd"]
-selected_script="res://src/scenes/levels_list/LevelsList.gd"
-open_help=["BaseButton", "CenterContainer"]
+open_scripts=["res://src/game.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/scene_levels_list/levels_listLevel.gd", "res://src/scenes/scene_levels_list/level_list_VBox.gd", "res://src/scenes/main.gd", "res://next_level.gd", "res://src/scenes/Scene.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/gui/title_screen.gd"]
+selected_script="res://src/scenes/main.gd"
+open_help=[]
 script_split_offset=112
 list_split_offset=0
 
