make hang player

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,37 +13,34 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=127
-dock_hsplit_3=-193
+dock_hsplit_3=-287
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/players/player_knight/Attacks.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/scene_menu/", "res://src/scenes/scene_levels/", "res://src/scenes/scene_levels/level_2/level_map/", "res://src/players/", "res://src/players/player_knight/", "res://src/player/", "res://src/gui/", "res://gui/", "res://assets/tiles/", "res://assets/sounds/", "res://assets/images/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/gui/title_screen.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/gui/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level.tscn", "res://src/player/player.tscn", "res://src/game_singleplayer.tscn", "res://src/players/player_knight/player_knight.tscn", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn")
-current_scene="res://src/scenes/scene_levels/level_1/level.tscn"
-center_split_offset=-172
+open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level.tscn", "res://src/player/player.tscn", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn", "res://src/players/player_knight/player_knight.tscn", "res://level/platforms/hangable.tscn", "res://level/level.tscn", "res://src/gui/title_screen.tscn")
+current_scene="res://src/players/player_knight/player_knight.tscn"
+center_split_offset=-273
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://src/game.gd", "res://src/player/gun.gd", "res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/gui/title_screen.gd"]
-selected_script="res://src/players/player_knight/player_knight.gd"
-open_help=["AnimatedSprite2D", "CharacterBody2D", "Node", "Node2D"]
+open_scripts=["res://level/coin.gd", "res://gui/coins_counter.gd", "res://src/game.gd", "res://src/player/gun.gd", "res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/gui/title_screen.gd"]
+selected_script="res://src/player/player.gd"
+open_help=["@GDScript", "AnimatedSprite2D", "AudioStreamMP3", "AudioStreamPlayer2D", "Camera2D", "CharacterBody2D", "Node", "Node2D", "Timer"]
 script_split_offset=112
 list_split_offset=46
-window_rect=Rect2i(70, 64, 954, 704)
-window_screen=0
-window_screen_rect=Rect2i(70, 27, 954, 741)
 
 [ShaderEditor]
 
