--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -45,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -59,16 +59,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 16,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 7,
-"selection_from_line": 7,
-"selection_to_column": 22,
-"selection_to_line": 7,
+"selection_from_column": 48,
+"selection_from_line": 16,
+"selection_to_column": 49,
+"selection_to_line": 16,
 "syntax_highlighter": "GDScript"
 }
 
@@ -91,10 +91,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -105,16 +105,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 12,
 "folded_lines": Array[int]([77]),
 "h_scroll_position": 0,
-"row": 103,
-"scroll_position": 62.0,
-"selection": true,
-"selection_from_column": 20,
-"selection_from_line": 103,
-"selection_to_column": 23,
-"selection_to_line": 103,
+"row": 8,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -179,12 +175,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 3,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 3,
+"selection_to_column": 20,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
@@ -193,16 +193,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 10,
-"selection_to_column": 0,
-"selection_to_line": 11,
+"row": 50,
+"scroll_position": 42.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -211,16 +207,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 8,
-"selection_to_column": 9,
-"selection_to_line": 9,
+"row": 14,
+"scroll_position": 12.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -247,12 +239,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": false,
+"row": 73,
+"scroll_position": 68.0,
+"selection": true,
+"selection_from_column": 12,
+"selection_from_line": 73,
+"selection_to_column": 13,
+"selection_to_line": 73,
 "syntax_highlighter": "GDScript"
 }
 
@@ -385,11 +381,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 16,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -427,11 +423,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
-"folded_lines": Array[int]([106, 140, 143, 161, 192, 212, 216]),
+"column": 40,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 236,
-"scroll_position": 121.0,
+"row": 18,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
