--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -423,11 +423,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 15.0,
-"selection": false,
+"row": 17,
+"scroll_position": 12.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 17,
+"selection_to_column": 30,
+"selection_to_line": 17,
 "syntax_highlighter": "GDScript"
 }
