make new animations

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -107,9 +107,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 12,
 "folded_lines": Array[int]([77]),
-"h_scroll_position": 0,
+"h_scroll_position": 48,
 "row": 8,
-"scroll_position": 0.0,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -385,7 +385,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 3.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -423,15 +423,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 17,
-"scroll_position": 12.0,
-"selection": true,
-"selection_from_column": 13,
-"selection_from_line": 17,
-"selection_to_column": 30,
-"selection_to_line": 17,
+"column": 22,
+"folded_lines": Array[int]([178, 242, 246, 264, 323, 339, 377]),
+"h_scroll_position": 21,
+"row": 315,
+"scroll_position": 272.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
