--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=127
+dock_hsplit_2=162
 dock_hsplit_3=-287
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/players/player_knight/move_set.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/players/", "res://src/players/player_knight/", "res://src/players/Bot Wheel/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/players/", "res://src/players/player_knight/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level.tscn", "res://src/player/player.tscn", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn", "res://src/players/player_knight/player_knight.tscn", "res://level/platforms/hangable.tscn", "res://level/level.tscn", "res://src/gui/title_screen.tscn")
 current_scene="res://src/players/player_knight/player_knight.tscn"
-center_split_offset=-346
+center_split_offset=-225
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=4
@@ -38,7 +38,7 @@ selected_bottom_panel_item=4
 
 open_scripts=["res://level/coin.gd", "res://gui/coins_counter.gd", "res://src/game.gd", "res://src/player/gun.gd", "res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/gui/title_screen.gd"]
 selected_script="res://src/players/player_knight/player_knight.gd"
-open_help=["@GDScript", "AnimatedSprite2D", "AudioStreamMP3", "AudioStreamPlayer2D", "Camera2D", "CharacterBody2D", "Node", "Node2D", "Timer"]
+open_help=["@GDScript", "@GlobalScope", "AnimatedSprite2D", "AudioStreamMP3", "AudioStreamPlayer2D", "Camera2D", "CharacterBody2D", "Node", "Node2D", "Timer"]
 script_split_offset=112
 list_split_offset=46
 
