make combo atta and shaders sprite on can combo attack

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -243,7 +243,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 73,
-"scroll_position": 68.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 12,
 "selection_from_line": 73,
@@ -423,11 +423,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
-"folded_lines": Array[int]([178, 242, 246, 264, 323, 339, 377]),
-"h_scroll_position": 21,
-"row": 315,
-"scroll_position": 272.0,
-"selection": false,
+"column": 30,
+"folded_lines": Array[int]([178, 242, 246, 343, 376, 381, 386, 393, 397]),
+"h_scroll_position": 50,
+"row": 336,
+"scroll_position": 303.0,
+"selection": true,
+"selection_from_column": 30,
+"selection_from_line": 336,
+"selection_to_column": 31,
+"selection_to_line": 336,
 "syntax_highlighter": "GDScript"
 }
