--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,27 +12,27 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=162
+dock_hsplit_2=145
 dock_hsplit_3=-287
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/players/", "res://src/players/player_knight/")
+dock_filesystem_selected_paths=PackedStringArray("res://shaders/outline.gdshader")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/players/", "res://src/players/player_knight/", "res://shaders/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level.tscn", "res://src/player/player.tscn", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn", "res://src/players/player_knight/player_knight.tscn", "res://level/platforms/hangable.tscn", "res://level/level.tscn", "res://src/gui/title_screen.tscn")
+open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level.tscn", "res://src/player/player.tscn", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn", "res://src/players/player_knight/player_knight.tscn", "res://level/platforms/hangable.tscn", "res://level/level.tscn", "res://src/gui/title_screen.tscn", "res://shaders/sprite_shaders.tscn")
 current_scene="res://src/players/player_knight/player_knight.tscn"
 center_split_offset=-225
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
@@ -44,6 +44,6 @@ list_split_offset=46
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://shaders/glow.gdshader", "res://shaders/aura.gdshader", "res://shaders/silouette.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://shaders/aura.gdshader"
