make level 2 fix errro two players

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,32 +12,32 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=145
+dock_hsplit_2=127
 dock_hsplit_3=-287
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://shaders/outline.gdshader")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/players/", "res://src/players/player_knight/", "res://shaders/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/scenes/scene_levels/level_2/level_spleetscreen.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/scenes/", "res://src/scenes/scene_levels/", "res://src/scenes/scene_levels/level_2/", "res://src/players/player_knight/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level.tscn", "res://src/player/player.tscn", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn", "res://src/players/player_knight/player_knight.tscn", "res://level/platforms/hangable.tscn", "res://level/level.tscn", "res://src/gui/title_screen.tscn", "res://shaders/sprite_shaders.tscn")
-current_scene="res://src/players/player_knight/player_knight.tscn"
-center_split_offset=-225
+open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_1/level_map/level_1_map.tscn", "res://src/players/player_knight/player_knight.tscn", "res://level/background/parallax_background.tscn", "res://src/gui/title_screen.tscn", "res://src/scenes/scene_levels/level_2/level.tscn", "res://src/scenes/scene_3/scene_3.tscn", "res://src/scenes/main.tscn", "res://src/scenes/scene_levels/level_2/level_spleetscreen.tscn")
+current_scene="res://src/gui/title_screen.tscn"
+center_split_offset=-268
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://level/coin.gd", "res://gui/coins_counter.gd", "res://src/game.gd", "res://src/player/gun.gd", "res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/gui/title_screen.gd"]
-selected_script="res://src/players/player_knight/player_knight.gd"
+open_scripts=["res://level/coin.gd", "res://gui/coins_counter.gd", "res://src/game.gd", "res://src/player/gun.gd", "res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/Level.gd", "res://src/scenes/scene_levels/levelsLevel.gd", "res://src/scenes/scene_levels/level_1/level_map/level_1_map.gd", "res://src/scenes/scene_levels/level_2/level_spleetscreen.gd", "res://src/scenes/main.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/scenes/scene_3/scene_3.gd", "res://src/gui/title_screen.gd"]
+selected_script="res://src/gui/title_screen.gd"
 open_help=["@GDScript", "@GlobalScope", "AnimatedSprite2D", "AudioStreamMP3", "AudioStreamPlayer2D", "Camera2D", "CharacterBody2D", "Node", "Node2D", "Timer"]
 script_split_offset=112
 list_split_offset=46
